--- a/.github/workflows/update-receptor.yml
+++ b/.github/workflows/update-receptor.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           git submodule update --remote ${{ github.event.client_payload.smd_name }}
           git add ${{ github.event.client_payload.smd_name }}        
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
+          git config --global user.name ${{ github.event.client_payload.user_name }}
+          git config --global user.email %{{ github.event.client_pauload.user_email }}
           git commit -m 'Updating submodules ${{ github.event.client_payload.smd_name }} [skip ci]'
           git push 
